<resources>
    <string name="app_name">Integrador3</string>
    <string name="register">Register</string>
    <string name="usuario">Username</string>
    <string name="password">Password</string>
    <string name="entrar">Entrar</string>
    <string name="distrito">Distrito</string>
    <string name="correo">Correo</string>
    <string name="registrar">Registrar</string>
    <string name="borrar">BORRAR</string>
    <string name="infrapeso">Infrapeso</string>
    <string name="imc">IMC:</string>
    <string name="calcular">CALCULAR</string>
    <string name="peso_kg">Peso (KG)</string>
    <string name="calcular_imc">CALCULAR IMC</string>
    <string name="altura_m">altura (m)</string>
    <string name="peso_k">Peso (Kg)</string>
    <string name="altura">Altura</string>
    <string name="descripcion">Descripcion</string>
    <string name="txt_perfil">PERFIL</string>
    <string name="keyword">Keyword</string>
    <string name="guardar">guardar</string>
    <string name="cancelar">cancelar</string>
    <string name="CalcularRMB">Calcular_RMB</string>
    <string name="calcularIMC">calcularIMC</string>
    <string name="calcularIMCC">Calcular_IMC</string>
    <string name="IMC">IMC</string>
    <string name="RMB">RMB</string>
    <string name="Perfil_Usuario">Perfil Metabolico</string>
    <string name="tmb">TMB</string>
    <string name="Recomensacion">Recomendacion</string>
    <string name="edad">edad</string>
    <string name="Edad">Edad</string>
    <string name="CONTROL_METABOLICO">CONTROL METABOLICO</string>
    <string name="Calorias_necesarias">Calorias Necesarias</string>
    <string name="Calorias_para_adelgazar">Calorias para adelgazar</string>
    <string name="Calorias_para_subir_de_peso">Calorias para subir de peso</string>
    <string name="TIEMPO">Cuantas calorias quemas en:</string>
    <string name="activ">Actividades Metabolicas</string>
    <string name="Tiempo">Tiempo:</string>
    <string name="minutos">minutos</string>
    <string name="controles">Control Ritmo Metabolico Basal</string>
    <string name="spiner">spiner</string>
    <string name="Calorias_perdidas">Calorias Perdidas</string>

    <string name="txt_Macro">MACRONUTRIENTES :</string>
    <string name="txt_Calorias"> Calorias</string>
    <string name="txt_Fibra"> Fibras</string>
    <string name="txt_Proteina"> Proteina</string>
    <string name="txt_Grasas"> Grasas</string>
    <string name="txt_Carbo"> Carboidratos</string>
    <string name="txt_gramos_cont">gr.</string>
    <string name="txt_kcal">Kcal.</string>
    <string name="txt_grasas">Grasas</string>
    <string name="txt_textview">TextView</string>
    <string name="title_Lista">Buscar Alimento</string>
</resources>
