<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff8000"
    tools:context=".CalcularIMC"
    android:orientation="vertical">
    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtentrada"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:text="@string/calcular_imc"
            android:textColor="#141316"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:text="@string/peso_kg"
            android:textColor="#FFF"
            android:layout_margin="3dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center"/>
        <EditText
            android:id="@+id/txtpeso"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:orientation="horizontal"
            android:hint="@string/peso_k"
            android:background="#FFF"
            android:layout_margin="3dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:inputType="number"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:text="@string/altura"
            android:textColor="#FFF"
            android:layout_margin="3dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center"/>
        <EditText
            android:id="@+id/txtaltura"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:orientation="horizontal"
            android:hint="@string/altura_m"
            android:background="#FFF"
            android:layout_margin="3dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center"
            android:inputType="numberDecimal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btncalcular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:text="@string/calcular"
            android:layout_margin="3dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center"/>

        <Button
            android:id="@+id/borrar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:text="@string/borrar"
            android:layout_margin="3dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center"/>
    </LinearLayout>

    <TextView
        android:id="@+id/twimc"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="3dp"
        android:layout_weight="1"
        android:background="#000"
        android:gravity="center"
        android:onClick="MostrarDaots"
        android:orientation="horizontal"
        android:text="@string/imc"
        android:textColor="#FFF"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
    android:id="@+id/twmensaje"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="horizontal"
    android:text="@string/infrapeso"
    android:textColor="#000"
    android:background="#FFF"
    android:layout_margin="10dp"
    android:textSize="20dp"
    android:gravity="center"/>

    <TextView
        android:id="@+id/twmen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:text="@string/Recomensacion"
        android:textColor="#000"
        android:background="#FFF"
        android:layout_margin="10dp"
        android:textSize="20dp"
        android:gravity="center"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/login"
        android:orientation="horizontal"
        android:gravity="center"/>

</LinearLayout>