<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B397EA"
    android:orientation="vertical"
    tools:context=".Actividades">
    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtentrada"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:text="@string/activ"
            android:textColor="#141316"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>
    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txttiempo"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:text="@string/TIEMPO"
            android:textColor="#141316"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="390dp"
            android:layout_height="104dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:text="@string/Tiempo"
            android:textColor="#FFF"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtpeso"
            android:layout_width="match_parent"
            android:layout_height="104dp"
            android:layout_margin="3dp"
            android:layout_weight="0.6"
            android:background="#FFF"
            android:gravity="center"
            android:hint="@string/minutos"
            android:inputType="number"
            android:orientation="horizontal"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="132dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:srcCompat="@drawable/ciclismo" />

        <ImageView
            android:layout_width="212dp"
            android:layout_height="126dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:srcCompat="@drawable/basquet" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="238dp"
            android:layout_height="117dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:srcCompat="@drawable/badminton" />

        <ImageView
            android:layout_width="194dp"
            android:layout_height="109dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:srcCompat="@drawable/bailar" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="240dp"
            android:layout_height="104dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:srcCompat="@drawable/aerobicos" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="106dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:srcCompat="@drawable/correr" />

    </LinearLayout>

</LinearLayout>